Closed Bug 1299125 Opened 9 years ago Closed 8 years ago

[Static Analysis][Uninitialized scalar field] In constructor EnvironmentCoordinate

Categories

(Core :: JavaScript Engine, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla58
Tracking Status
firefox51 --- affected
firefox58 --- fixed

People

(Reporter: andi, Assigned: andi)

References

(Blocks 1 open bug)

Details

(Keywords: coverity, triage-deferred, Whiteboard: CID 1372306)

Attachments

(1 file)

The Static Analysis tool Coverity detected that member variables |_slot| and |_hops| are not initialised in the default ctor. >>39 EnvironmentCoordinate() {} This blocks the integration of our tool for static analysis based in clang plugin that looks for this kind of issues and treats them as errors. Since the default constructor is only use to make the class compliant to other data structures we can make this this default since our clang analysis skips constructors that are default. >>39 EnvironmentCoordinate() = default;
Keywords: triage-deferred
Priority: -- → P3
Attachment #8786331 - Flags: review?(jorendorff) → review?(shu)
Comment on attachment 8786331 [details] Bug 1299125 - make the constructor of EnvironmentCoordinate default. https://reviewboard.mozilla.org/r/75316/#review200706
Attachment #8786331 - Flags: review?(jwalden+bmo) → review+
Pushed by bpostelnicu@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a54c51168b3b make the constructor of EnvironmentCoordinate default. r=Waldo
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla58
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: