Bug 1299125 - make the constructor of EnvironmentCoordinate default. r=Waldo

MozReview-Commit-ID: FDylNVK73Sv

--HG--
extra : rebase_source : 5e86b1ec57c4a3aba6df469251054aa3519e1cdd